--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^6.15.0",
+    "@babylonjs/gui": "^6.15.0",
+    "buffer": "^6.0.3",
+    "buffer2": "^0.0.0",
+    "gl-vec3": "^1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-babylonjs": "^3.1.17",
+    "react-dom": "^18.2.0",
+    "svg-mesh-3d": "^1.1.0",
+    "triangle-centroid": "^1.0.0"
   },
   "devDependencies": {
+    "@types/gl-vec3": "^1.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -23,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-node-polyfills": "^0.9.0"
   }
 }
