--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "buffer": "^6.0.3",
     "buffer2": "^0.0.0",
     "gl-vec3": "^1.1.3",
+    "mesh-reindex": "^1.0.0",
     "react": "^18.2.0",
     "react-babylonjs": "^3.1.17",
     "react-dom": "^18.2.0",
     "svg-mesh-3d": "^1.1.0",
-    "triangle-centroid": "^1.0.0"
+    "triangle-centroid": "^1.0.0",
+    "unindex-mesh": "^2.0.0"
   },
   "devDependencies": {
     "@types/gl-vec3": "^1.1.1",
